<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Beiwe</string>
    <string name="action_settings">Settings</string>
    <string name="data_upload_url">http://dev.beiwe.org/upload</string>
    <string name="daily_survey_questions_url">http://dev.beiwe.org/download_daily_survey</string>
    <string name="weekly_survey_questions_url">http://dev.beiwe.org/download_weekly_survey</string>
    <string name="forgot_password_url">http://dev.beiwe.org/forgot_password</string>
    <string name="reset_password_url">http://dev.beiwe.org/set_password</string>
    <string name="graph_url">http://dev.beiwe.org/graph</string>
    <string name="register_url">http://dev.beiwe.org/register_user</string>
    <string name="title_activity_audio_recorder">Make a Voice Recording</string>
    <string name="button_go_to_audio_recorder_activity">Go to Audio Recorder</string>
    <string name="button_play">Play Recording</string>
    <string name="button_record">Record</string>
    <string name="title_activity_survey">Survey</string>
    <string name="button_go_to_survey">Take Survey</string>
    <string name="button_toggle_gps">Toggle GPS</string>
    <string name="button_toggle_accelerometer">Toggle Accelerometer</string>
    <string name="button_notify">Notify</string>
    <string name="button_print_log">Print Internal Log</string>
    <string name="button_clear_log">Clear Internal Log</string>
    <string name="signout">Sign out</string>
    <string name="button_bluetooth_start">Start Bluetooth Scan</string>
    <string name="button_bluetooth_stop">Stop Bluetooth Scan</string>
    <string name="timer_button">Timer Button?</string>
    <string name="button_delete_everything">Delete Everything (except encryption key)</string>
    <string name="button_list_files">List All Files</string>
    <string name="button_wifi_scan">Scan Wifi</string>
    <string name="check_if_alarm_is_set">Check if alarm is set</string>
    <string name="unregister_button">unregister</string>
    <string name="button_logcat_key_file">logcat key file</string>
    <string name="button_encryption">ENCRYPT!~!!!</string>
    <string name="button_show_daily_survey_notification">Show daily survey notification</string>
    <string name="button_show_weekly_survey_notification">Show weekly survey notification</string>
    <string name="button_go_to_main_menu">Go To Main Menu</string>
    <string name="button_make_new_files">Make New Files.</string>
    <string name="button_prior_alarm_times">Log prior alarm times</string>
    <string name="button_show_audio_survey_notification">Show audio recording notification</string>
    <string name="question_error_text">If you are reading this, something broke. Please contact the study administrators, and tell them that there is a bug in the survey!</string>
    <string name="invalid_device">This device does not meet minimum specifications for this app, to avoid any issues resulting from this please uninstall the app.</string>
    <string name="survey_submit_button">Submit Answers</string>
    <string name="survey_submit_success_message">Thank you for completing the survey.  Don\'t forget, no clinician will see your answers.  So, if you need help or you\'re thinking about harming yourself, please call your clinician.  You can also press the \"Call My Clinician\" button above to call your clinician.</string>
    <string name="survey_submit_error_message">There has been an error; your answers may not have been recorded and saved</string>
    <string name="button_upload">Upload Data Files</string>
    <string name="survey_loading_text" tools:ignore="TypographyEllipsis">Downloading the most up-to-date survey questions from the server...</string>
    <string name="login_page_for_app">Login page for app</string>
    <string name="login_activity_please_enter_password">Please enter password:</string>
    <string name="incorrect_user_pass_combo">Incorrect user-password combination!</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_login_string">Log In</string>
    <string name="login_activity_welcoming_message">Log in to Beiwe</string>
    <string name="user_id_system_mismatch">User ID does not match the one in the system. Try again</string>
    <string name="password_system_mismatch">Incorrect user ID and password combination</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="reset_password_current_password_caption">Please enter your old password:</string>
    <string name="reset_password_new_password_caption">Please enter your new password:</string>
    <string name="reset_password_confirm_new_password_caption">Enter your new password again:</string>
    <string name="reset_password_submit">Submit</string>
    <string name="invalid_old_password">Old password incorrect</string>
    <string name="pass_reset_complete">Password reset complete</string>
    <string name="password_mismatch">Password does not match confirm password</string>
    <string name="password_too_short">Your password must be longer than %d characters.</string>
    <string name="forgot_password_title">Call the research assistant to get a temporary password</string>
    <string name="forgot_password_title_with_id">Call the research assistant to get a temporary password. Your ID is \"%s\".</string>
    <string name="forgot_password_instructions_text">Press the button to call the research assistance and ask for a temporary password.  Identify yourself only by your User ID instead of by name.  Enter the temporary password you receive and a new, permanent password you want to use.</string>
    <string name="forgot_password_image_button_description">Call Button</string>
    <string name="forgot_password_temporary_password_caption">Enter your temporary password (get this by calling the research assistant)</string>
    <string name="forgot_password_new_password_caption">Please enter your new permanent password (the one you want to use)</string>
    <string name="forgot_password_confirm_new_password_caption">Enter your new permanent password again (the one you want to use)</string>
    <string name="register_activity_welcoming_message">Welcome to the study</string>
    <string name="register_activity_instructions">Please fill out the information below</string>
    <string name="register_activity_user_id">Please enter your user ID:</string>
    <string name="register_activity_temp_password_caption">Please enter your temporary registration password:</string>
    <string name="register_activity_new_password_caption">Please enter your new, permanent password:</string>
    <string name="register_activity_confirm_new_password_caption">Enter your new, permanent password again:</string>
    <string name="register_activity_submit">Submit</string>
    <string name="title_activity_loading">Loading Beiwe</string>
    <string name="invalid_user_id">Invalid user ID</string>
    <string name="invalid_password">Invalid password</string>
    <string name="couldnt_register">Could not register this device</string>
    <string name="title_activity_phone_number_entry">PhoneNumberEntry</string>
    <string name="number_entry_top_message">Number Entry</string>
    <string name="number_entry_button">Set Numbers</string>
    <string name="primaryCarePrompt">The phone number of your primary care physician</string>
    <string name="passwordResetPrompt">The phone number for the research assistant</string>
    <string name="loading_activity_loading_message" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="survey_notification_title_template">Survey: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_main_menu">Beiwe Main Screen</string>
    <string name="main_menu_top_message">Welcome to Beiwe!</string>
    <string name="main_menu_view_graph">View survey answers on graph</string>
    <string name="main_menu_call_my_clinician">Call My Clinician</string>
    <string name="record_activity_default_message">We would like to know how your day is going.  When you are ready, please press \"Record\" and speak for about 2 minutes.  Press \"Stop\" when you are finished. The recording will stop automatically after 4 minutes. Remember, researchers will not review and analyze your data until the end of the study, so if you are ill or in danger and need to speak with your clinician, press the \"Call My Clinician\" button.</string>
    <string name="record_activity_button">Press to record</string>
    <string name="record_activity_playback">Play recording</string>
    <string name="play_button_text">Play</string>
    <string name="play_button_stop_text">Stop</string>
    <string name="record_button_text">Record</string>
    <string name="record_button_stop_text">Stop</string>
    <string name="done_button_text">Done</string>
    <string name="timeout_msg_1st_half">"The voice recording can't be longer than "</string>
    <string name="timeout_msg_2nd_half">" minutes, so your recording was automatically stopped and saved"</string>
    <string name="daily_survey_notification_message">New daily survey</string>
    <string name="daily_survey_notification_details">Please fill out the daily survey.</string>
    <string name="weekly_survey_notification_message">New weekly survey</string>
    <string name="weekly_survey_notification_details">Please fill out the weekly survey.</string>
    <string name="recording_notification_message">New voice recording</string>
    <string name="recording_notification_details">Please make a brief voice recording.</string>
    <string name="title_activity_graph">Previous Survey Answers</string>
    <string name="accelerometer_off">Accelerometer OFF</string>
    <string name="accelerometer_on">Accelerometer On</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_on">Bluetooth On</string>
    <string name="gps_off">GPS OFF</string>
    <string name="gps_on">GPS On</string>
    <string name="signout_intent">Signout</string>
    <string name="voice_recording">Voice Recording</string>
    <string name="daily_survey">Daily Survey</string>
    <string name="weekly_survey">Weekly Survey</string>
    <string name="upload_data_files_intent">Upload data files</string>
    <string name="create_new_data_files_intent">Create new data files</string>
    <string name="check_for_new_surveys_intent">Check for new surveys</string>
    <string name="run_wifi_log">Wifi Log</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_about">About This App</string>
    <string name="call_my_clinician">Call My Clinician</string>
    <string name="call_research_assistant">Call Research Assistant</string>
    <string name="title_activity_about">About Beiwe</string>
</resources>