<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonPrintInternalLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_print_log"
        android:onClick="printInternalLog" />

    <Button
        android:id="@+id/buttonClearInternalLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear_log"
        android:onClick="clearInternalLog" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_audio_recorder_activity"
        android:onClick="goToAudioRecorder" />

</LinearLayout>