<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/registerActivityMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.beiwe.app.DeviceInfo" >

        <TextView
            android:id="@+id/welcoming_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_welcoming_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/register_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_instructions" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/registerUserIdCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_user_id" />

        <EditText
            android:id="@+id/registerUserIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/registerTempPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_temp_password_caption" />

        <EditText
            android:id="@+id/registerTempPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10" />

        <TextView
            android:id="@+id/registerNewPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_new_password_caption"/>

        <EditText
            android:id="@+id/registerNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"/>

        <TextView
            android:id="@+id/registerConfirmNewPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_confirm_new_password_caption"/>

        <EditText
            android:id="@+id/registerConfirmNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="registrationSequence"
            android:text="@string/register_activity_submit" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>