<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.beiwe.app.ui.PhoneNumberEntry" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_entry_top_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primaryCarePrompt"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/primaryCareNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >
        <requestFocus />
    </EditText>

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordResetPrompt"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/passwordResetNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >
    </EditText>
    
    <Button
        android:id="@+id/phoneNumbersConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+string/number_entry_button"
        android:onClick="checkAndPromptConsent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    
</LinearLayout>
